--- a/css/users.css
+++ b/css/users.css
@@ -4,8 +4,8 @@
 	font-size:16px;
 	margin:5px 5px;
 	padding:5px 15px;
+	background:#EFF6FC;
 }
-
 #users img {
 	vertical-align:bottom;
 	margin:0px 0px -1px 0px;
