--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,13 @@
 body {
 	font-family:Arial,Helvetica,sans-serif;
 	width:750px;
-	padding-top:10px;
+	padding-top:20px;
 	margin:0 auto;
 	background:#CADBEC;
 }
 h1 {
 	font-size:32px;
+	padding-left:5px;
 }
 h2 {
 	font-size:18px;
@@ -23,6 +24,7 @@ label {
 #main_content {
 	position:absolute;
 	width:650px;
+	min-height:500px;
 	height:auto;
 	border:3px solid #000000;
 	border-radius: 15px;
